--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<h1>Recipes:</h1>
 	<ul>
 		<li><a href="./recipes/orange-chicken.html">Orange Chicken</a></li>
-		<li>Dumplings</li>
-		<li>Cheesecake</li>
-		<li>Brownies</li>
+		<li>Dumplings (coming soon!)</li>
+		<li>Cheesecake (coming soon!)</li>
+		<li>Brownies (coming soon!)</li>
 	</ul>
 </body>
