--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 
 <head lang="en">
-	<title>Ray's Recipe Resource</title>
+	<title>Ugly Recipe Site</title>
 </head>
 
 <body>
 	<h1>Recipes:</h1>
 	<ul>
 		<li><a href="./recipes/orange-chicken.html">Orange Chicken</a></li>
-		<li>Dumplings (coming soon!)</li>
-		<li>Cheesecake (coming soon!)</li>
-		<li>Brownies (coming soon!)</li>
+		<li><a href="./recipes/strawberry-cheesecake.html">Strawberry Cheesecake</a></li>
 	</ul>
 </body>
