Humorous steps instead of serious ones, for a bit of fun.

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-	<a href="./..">Back to index</a>
+	<a href="./..">Return to recipe index</a>
 	<h1>Orange Chicken Recipe</h1>
 	<img
 			alt="hi"
@@ -15,18 +15,14 @@
 			width="300">
 	<h3>Ingredients</h3>
 	<ul>
-		<li>1 Orange</li>
-		<li>Chicken Tenderloins</li>
-		<li>Xanthan Gum</li>
-		<li>Breadcrumbs</li>
+		<li>1 Chicken</li>
+		<li>1 Bottle of Orange Paint</li>
 	</ul>
 	<h3>Steps</h3>
 	<ol>
-		<li>Get the chicken tenderloins</li>
-		<li>Cut it into pieces</li>
-		<li>Dip into sauce, then into breadcrumbs</li>
-		<li>...</li>
-		<li>etc</li>
+		<li>Put the chicken on a plate.</li>
+		<li>Paint the chicken orange.</li>
+		<li>You are done. You have made orange chicken.</li>
 	</ol>
-	<a href="./..">Back to index</a>
+	<a href="./..">Return to recipe index</a>
 </body>
